--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div>
                 <img v-if="selected" :src="selected" alt=""/>
-                <button class="btn btn-primary" @click="peccato">scarica Immagine</button>
+                <button class="btn btn-primary" @click="randomImg">scarica Immagine</button>
             </div>
         </div>
     </div>
