--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <button class="btn btn-dark text-danger"@click="peccato">Sin</button>
             </div>
 
-            <div>
-                <img v-if="selected" :src="selected" alt=""/>
+            <div class="mb-5">
+                <img  :src="imgSrc" class="img-thumbnail" alt=""/>
                 <button class="btn btn-primary" @click="randomImg">scarica Immagine</button>
             </div>
         </div>
